--- a/public/styles/partials/_global.scss
+++ b/public/styles/partials/_global.scss
@@ -10,7 +10,23 @@
   min-height: 100vh;
   flex-direction: column;
 
+  header {
+    display: flex;
+    width: 100vw;
+    padding: 20px;
+    justify-content: flex-end;
+    align-items: center;
+  }
+
   main {
     flex: 1 0 auto;
+  }
+
+  footer {
+    display: flex;
+    width: 100vw;
+    padding: 20px;
+    justify-content: center;
+    align-items: center;
   }
 }
