--- a/public/styles/partials/features/_weather.scss
+++ b/public/styles/partials/features/_weather.scss
@@ -11,6 +11,10 @@
     display: flex;
     flex-direction: column;
     color: #fff;
+
+    .weather-temperature {
+      font-size: 2em;
+    }
   }
 }
 
