--- a/public/styles/index.css
+++ b/public/styles/index.css
@@ -33,6 +33,19 @@
 }
 
 .App main {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: start;
+      -ms-flex-pack: start;
+          justify-content: flex-start;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
   -webkit-box-flex: 1;
       -ms-flex: 1 0 auto;
           flex: 1 0 auto;
@@ -69,8 +82,8 @@
   width: 100%;
   -webkit-transform: scale(1.5);
           transform: scale(1.5);
-  -webkit-filter: brightness(0.5) blur(5px);
-          filter: brightness(0.5) blur(5px);
+  -webkit-filter: brightness(0.5) blur(2px);
+          filter: brightness(0.5) blur(2px);
 }
 
 .background-image-container .fade {
@@ -185,13 +198,215 @@
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
   padding: 5px;
   text-align: center;
   color: #fff;
 }
 
+.quote-container a {
+  width: -webkit-fit-content;
+  width: -moz-fit-content;
+  width: fit-content;
+}
+
+.quote-error-container {
+  color: #fff;
+  background-color: red;
+  padding: 5px;
+}
+
 /* Goal */
-.goal-form-wrapper {
-  width: 50vw;
+.goal-container {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  width: 70vw;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.goal-container .goal-form-container {
+  width: 100%;
+  background: rgba(255, 255, 255, 0.25);
+  -webkit-box-shadow: 0 8px 32px 0 rgba(31, 38, 135, 0.37);
+          box-shadow: 0 8px 32px 0 rgba(31, 38, 135, 0.37);
+  -webkit-backdrop-filter: blur(4px);
+          backdrop-filter: blur(4px);
+  border-radius: 10px;
+  border: 1px solid rgba(255, 255, 255, 0.18);
+  height: -webkit-fit-content;
+  height: -moz-fit-content;
+  height: fit-content;
+  padding: 12px 12px;
+  margin-bottom: 5px;
+  /* label color */
+  /* label focus color */
+  /* label underline focus color */
+}
+
+.goal-container .goal-form-container h3 {
+  margin: 0;
+  width: -webkit-fit-content;
+  width: -moz-fit-content;
+  width: fit-content;
+  color: #fff;
+}
+
+.goal-container .goal-form-container input[type="text"] {
+  color: #fff;
+}
+
+.goal-container .goal-form-container .input-field label {
+  color: #fff;
+}
+
+.goal-container .goal-form-container .input-field input[type="text"]:focus + label {
+  color: #fff;
+}
+
+.goal-container .goal-form-container .input-field input[type="text"]:focus {
+  border-bottom: 1px solid #fff;
+  -webkit-box-shadow: 0 1px 0 0 #fff;
+          box-shadow: 0 1px 0 0 #fff;
+}
+
+.goal-container .goal-entries-container {
+  width: 100%;
+  background: rgba(255, 255, 255, 0.25);
+  -webkit-box-shadow: 0 8px 32px 0 rgba(31, 38, 135, 0.37);
+          box-shadow: 0 8px 32px 0 rgba(31, 38, 135, 0.37);
+  -webkit-backdrop-filter: blur(4px);
+          backdrop-filter: blur(4px);
+  border-radius: 10px;
+  border: 1px solid rgba(255, 255, 255, 0.18);
+  height: -webkit-fit-content;
+  height: -moz-fit-content;
+  height: fit-content;
+  padding: 12px 12px;
+}
+
+.goal-container .goal-entries-container ul {
+  list-style: none;
+  padding: 0;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.goal-container .goal-entries-container ul .goal-entry-container {
+  position: relative;
+  -webkit-backdrop-filter: blur(4px);
+          backdrop-filter: blur(4px);
+  border-radius: 10px;
+  border: 1px solid rgba(255, 255, 255, 0.18);
+  width: -webkit-fit-content;
+  width: -moz-fit-content;
+  width: fit-content;
+  padding: 12px 12px;
+  position: relative;
+  font-size: 18px;
+  color: #fff;
+}
+
+.goal-container .goal-entries-container ul .goal-entry-container .goal-entry-actions-container {
+  position: absolute;
+  top: -12px;
+  right: -12px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  opacity: 0;
+  -webkit-transition: opacity 0.1s ease-in;
+  transition: opacity 0.1s ease-in;
+}
+
+.goal-container .goal-entries-container ul .goal-entry-container .goal-entry-actions-container button {
+  -webkit-backdrop-filter: blur(4px);
+          backdrop-filter: blur(4px);
+  border-radius: 10px;
+  border: 1px solid rgba(255, 255, 255, 0.18);
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-transition: -webkit-filter 0.2s ease-in;
+  transition: -webkit-filter 0.2s ease-in;
+  transition: filter 0.2s ease-in;
+  transition: filter 0.2s ease-in, -webkit-filter 0.2s ease-in;
+  outline: none;
+  color: white;
+  font-weight: 700;
+  padding: 4px 8px;
+  cursor: pointer;
+  font-size: 0.5em;
+}
+
+.goal-container .goal-entries-container ul .goal-entry-container .goal-entry-actions-container button:hover {
+  -webkit-filter: brightness(1.3);
+          filter: brightness(1.3);
+}
+
+.goal-container .goal-entries-container ul .goal-entry-container .goal-entry-actions-container .remove-button {
+  background: rgba(208, 2, 27, 0.25);
+  -webkit-box-shadow: 0 8px 32px 0 rgba(31, 38, 135, 0.37);
+          box-shadow: 0 8px 32px 0 rgba(31, 38, 135, 0.37);
+}
+
+.goal-container .goal-entries-container ul .goal-entry-container .goal-entry-actions-container .done-button {
+  background: rgba(80, 227, 194, 0.25);
+  -webkit-box-shadow: 0 8px 32px 0 rgba(31, 38, 135, 0.37);
+          box-shadow: 0 8px 32px 0 rgba(31, 38, 135, 0.37);
+}
+
+.goal-container .goal-entries-container ul .goal-entry-container .goal-entry-actions-container > * {
+  margin-right: 6px;
+}
+
+.goal-container .goal-entries-container ul .goal-entry-container:hover .goal-entry-actions-container {
+  opacity: 1;
+}
+
+.goal-container .goal-entries-container ul .isDone {
+  background: rgba(155, 155, 155, 0.25);
+  -webkit-box-shadow: 0 8px 32px 0 rgba(31, 38, 135, 0.37);
+          box-shadow: 0 8px 32px 0 rgba(31, 38, 135, 0.37);
+  opacity: 0.25;
+}
+
+.goal-container .goal-entries-container ul li {
+  border-radius: 10px;
+  border: 1px solid rgba(255, 255, 255, 0.18);
+}
+
+.goal-container .goal-entries-container ul > * {
+  margin-right: 12px;
+  margin-bottom: 12px;
 }
 /*# sourceMappingURL=index.css.map */
