--- a/public/styles/partials/_global.scss
+++ b/public/styles/partials/_global.scss
@@ -19,6 +19,10 @@
   }
 
   main {
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: center;
     flex: 1 0 auto;
   }
 
