--- a/public/styles/partials/features/_quote.scss
+++ b/public/styles/partials/features/_quote.scss
@@ -1,7 +1,19 @@
 .quote-container {
   display: flex;
   flex-direction: column;
+  justify-content: center;
+  align-items: center;
   padding: 5px;
   text-align: center;
   color: #fff;
+
+  a {
+    width: fit-content;
+  }
+}
+
+.quote-error-container {
+  color: #fff;
+  background-color: red;
+  padding: 5px;
 }
