--- a/public/styles/index.css
+++ b/public/styles/index.css
@@ -299,7 +299,7 @@
   padding: 12px 12px;
 }
 
-.goal-container .goal-entries-container ul {
+.goal-container .goal-entries-container .goal-entries-list {
   list-style: none;
   padding: 0;
   display: -webkit-box;
@@ -315,7 +315,7 @@
           align-items: center;
 }
 
-.goal-container .goal-entries-container ul .goal-entry-container {
+.goal-container .goal-entries-container .goal-entries-list .goal-entry-container {
   position: relative;
   -webkit-backdrop-filter: blur(4px);
           backdrop-filter: blur(4px);
@@ -330,7 +330,7 @@
   color: #fff;
 }
 
-.goal-container .goal-entries-container ul .goal-entry-container .goal-entry-actions-container {
+.goal-container .goal-entries-container .goal-entries-list .goal-entry-container .goal-entry-actions-container {
   position: absolute;
   top: -12px;
   right: -12px;
@@ -342,7 +342,7 @@
   transition: opacity 0.1s ease-in;
 }
 
-.goal-container .goal-entries-container ul .goal-entry-container .goal-entry-actions-container button {
+.goal-container .goal-entries-container .goal-entries-list .goal-entry-container .goal-entry-actions-container button {
   -webkit-backdrop-filter: blur(4px);
           backdrop-filter: blur(4px);
   border-radius: 10px;
@@ -368,41 +368,75 @@
   font-size: 0.5em;
 }
 
-.goal-container .goal-entries-container ul .goal-entry-container .goal-entry-actions-container button:hover {
+.goal-container .goal-entries-container .goal-entries-list .goal-entry-container .goal-entry-actions-container button:hover {
   -webkit-filter: brightness(1.3);
           filter: brightness(1.3);
 }
 
-.goal-container .goal-entries-container ul .goal-entry-container .goal-entry-actions-container .remove-button {
+.goal-container .goal-entries-container .goal-entries-list .goal-entry-container .goal-entry-actions-container .remove-button {
   background: rgba(208, 2, 27, 0.25);
   -webkit-box-shadow: 0 8px 32px 0 rgba(31, 38, 135, 0.37);
           box-shadow: 0 8px 32px 0 rgba(31, 38, 135, 0.37);
 }
 
-.goal-container .goal-entries-container ul .goal-entry-container .goal-entry-actions-container .done-button {
+.goal-container .goal-entries-container .goal-entries-list .goal-entry-container .goal-entry-actions-container .done-button {
   background: rgba(80, 227, 194, 0.25);
   -webkit-box-shadow: 0 8px 32px 0 rgba(31, 38, 135, 0.37);
           box-shadow: 0 8px 32px 0 rgba(31, 38, 135, 0.37);
 }
 
-.goal-container .goal-entries-container ul .goal-entry-container .goal-entry-actions-container > * {
+.goal-container .goal-entries-container .goal-entries-list .goal-entry-container .goal-entry-actions-container > * {
   margin-right: 6px;
 }
 
-.goal-container .goal-entries-container ul .goal-entry-container:hover .goal-entry-actions-container {
+.goal-container .goal-entries-container .goal-entries-list .goal-entry-container:hover .goal-entry-actions-container {
   opacity: 1;
 }
 
-.goal-container .goal-entries-container ul .isDone {
+.goal-container .goal-entries-container .goal-entries-list .goal {
+  -webkit-backdrop-filter: blur(4px);
+          backdrop-filter: blur(4px);
+  border-radius: 10px;
+  border: 1px solid rgba(255, 255, 255, 0.18);
+}
+
+.goal-container .goal-entries-container .goal-entries-list .red {
+  -webkit-backdrop-filter: blur(4px);
+          backdrop-filter: blur(4px);
+  background: rgba(230, 57, 70, 0.25) !important;
+  -webkit-box-shadow: 0 8px 32px 0 rgba(31, 38, 135, 0.37);
+          box-shadow: 0 8px 32px 0 rgba(31, 38, 135, 0.37);
+}
+
+.goal-container .goal-entries-container .goal-entries-list .blue {
+  -webkit-backdrop-filter: blur(4px);
+          backdrop-filter: blur(4px);
+  background: rgba(69, 123, 157, 0.25) !important;
+  -webkit-box-shadow: 0 8px 32px 0 rgba(31, 38, 135, 0.37);
+          box-shadow: 0 8px 32px 0 rgba(31, 38, 135, 0.37);
+}
+
+.goal-container .goal-entries-container .goal-entries-list .green {
+  -webkit-backdrop-filter: blur(4px);
+          backdrop-filter: blur(4px);
+  background: rgba(88, 129, 87, 0.25) !important;
+  -webkit-box-shadow: 0 8px 32px 0 rgba(31, 38, 135, 0.37);
+          box-shadow: 0 8px 32px 0 rgba(31, 38, 135, 0.37);
+}
+
+.goal-container .goal-entries-container .goal-entries-list .orange {
+  -webkit-backdrop-filter: blur(4px);
+          backdrop-filter: blur(4px);
+  background: rgba(247, 127, 0, 0.25) !important;
+  -webkit-box-shadow: 0 8px 32px 0 rgba(31, 38, 135, 0.37);
+          box-shadow: 0 8px 32px 0 rgba(31, 38, 135, 0.37);
+}
+
+.goal-container .goal-entries-container .goal-entries-list .isDone {
   background: rgba(155, 155, 155, 0.25);
   -webkit-box-shadow: 0 8px 32px 0 rgba(31, 38, 135, 0.37);
           box-shadow: 0 8px 32px 0 rgba(31, 38, 135, 0.37);
   opacity: 0.25;
-}
-
-.goal-container .goal-entries-container ul li {
-  border-radius: 10px;
-  border: 1px solid rgba(255, 255, 255, 0.18);
 }
 
 .goal-container .goal-entries-container ul > * {
